Fixed partial and routes

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,21 +27,28 @@
         </a>
       </div>
       <div class="navbar-start">
-        <a class="navbar-item" href="/">
-          Home
-        </a>
+        <div class="navbar-item has-dropdown is-hoverable">
+          <a class="navbar-link">
+            Products
+          </a>
+          <div class="navbar-dropdown">
+            <a class="navbar-item" href="/">
+              Home
+            </a>
 
-        <a class="navbar-item">
-          Planets
-        </a>
+            <a class="navbar-item" href="/planet">
+              Planets
+            </a>
 
-        <a class="navbar-item">
-          Stars
-        </a>
+            <a class="navbar-item" href="/star">
+              Stars
+            </a>
 
-        <a class="navbar-item">
-          Asteroids
-        </a>
+            <a class="navbar-item" href="/asteroid">
+              Asteroids
+            </a>
+          </div>
+        </div>
       </div>
     </nav>
     <section class="section">
