--- a/app/views/planet/index.html.erb
+++ b/app/views/planet/index.html.erb
@@ -1,1 +1,6 @@
 <h1 class="title">Index</h1>
+
+<div class="columns">
+  <%= render partial: 'planet',
+             collection: @planets %>
+</div>
