--- a/app/views/star/index.html.erb
+++ b/app/views/star/index.html.erb
@@ -1,6 +1,6 @@
 <h1 class="title">Index</h1>
 
-<div class="columns">
+<div class="columns is-multiline is-mobile">
   <%= render partial: 'star',
              collection: @stars %>
 </div>
