Paginatation for products

--- a/app/views/star/index.html.erb
+++ b/app/views/star/index.html.erb
@@ -1,6 +1,10 @@
 <h1 class="title">Index</h1>
 
+<%= paginate @stars %>
+
 <div class="columns is-multiline is-mobile">
   <%= render partial: 'star',
              collection: @stars %>
 </div>
+
+<%= paginate @stars %>
