--- a/app/views/asteroid/index.html.erb
+++ b/app/views/asteroid/index.html.erb
@@ -1,6 +1,10 @@
 <h1 class="title">Index</h1>
 
+<%= paginate @asteroids %>
+
 <div class="columns is-multiline is-mobile">
   <%= render partial: 'asteroid',
              collection: @asteroids %>
 </div>
+
+<%= paginate @asteroids %>
