--- a/app/views/planet/index.html.erb
+++ b/app/views/planet/index.html.erb
@@ -1,6 +1,10 @@
 <h1 class="title">Index</h1>
 
+<%= paginate @planets %>
+
 <div class="columns is-multiline is-mobile">
   <%= render partial: 'planet',
              collection: @planets %>
 </div>
+
+<%= paginate @planets %>
