--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -55,5 +55,13 @@
         <%= yield %>
       </div>
     </section>
+    <footer class="footer">
+      <div class="content has-text-centered">
+        <p>
+          To learn more: <a href="#">About</a>
+          - <a href="#">Contact</a>
+        </p>
+      </div>
+    </footer>
   </body>
 </html>
