--- a/app/views/asteroid/_asteroid.html.erb
+++ b/app/views/asteroid/_asteroid.html.erb
@@ -8,8 +8,9 @@
       </div>
     <% end %>
     <div class="card-content">
-      <p class="title is-4"><%= asteroid.name %></p>
-      <p class="subtitle is-6 has-text-success	">$<%= asteroid.cost %></p>
+      <p class="title is-4"><%= link_to asteroid.name, asteroid %></p>
+      <p class="subtitle is-6 has-text-success">$<%= asteroid.cost %></p>
+      <p><%= asteroid.asteroid_type.name %></p>
       <div class="content">
         <%= asteroid.description %>
       </div>
