--- a/app/views/star/_star.html.erb
+++ b/app/views/star/_star.html.erb
@@ -8,8 +8,9 @@
       </div>
     <% end %>
     <div class="card-content">
-      <p class="title is-4"><%= star.name %></p>
-      <p class="subtitle is-6 has-text-success	">$<%= star.cost %></p>
+      <p class="title is-4"><%= link_to star.name, star %></p>
+      <p class="subtitle is-6 has-text-success">$<%= star.cost %></p>
+      <p><%= star.star_type.name %></p>
       <div class="content">
         <%= star.description %>
       </div>
