--- a/app/views/star/show.html.erb
+++ b/app/views/star/show.html.erb
@@ -1,1 +1,10 @@
-<h1 class="title">Show</h1>
+<h1 class="title title is-2">Show</h1>
+
+<figure>
+  <%= image_tag @star.image %>
+</figure>
+
+<p class="title is-4"><%= @star.name %></p>
+<p class="subtitle is-6 has-text-success">$<%= @star.cost %></p>
+<p><%= @star_type.name %></p>
+<p><%= @star.description %></p>
