--- a/app/views/planet/_planet.html.erb
+++ b/app/views/planet/_planet.html.erb
@@ -3,7 +3,7 @@
     <% if planet.image.present? %>
       <div class="card-image">
         <figure class="image is 3x3">
-          <%= image_tag planet.image %>
+          <%= image_tag(planet.image, alt: "#{planet.name} image") %>
         </figure>
       </div>
     <% end %>
