--- a/app/views/planet/index.html.erb
+++ b/app/views/planet/index.html.erb
@@ -2,6 +2,16 @@
 
 <%= paginate @planets %>
 
+<div class="select mb-5">
+  <select>
+    <option>Show All</option>
+    <option>Alphabetized</option>
+    <option>Newest</option>
+    <option>Price: High to Low</option>
+    <option>Price: Low to High</option>
+  </select>
+</div>
+
 <div class="columns is-multiline is-mobile">
   <%= render partial: 'planet',
              collection: @planets %>
