Fixed routes, added sorting for asteroids

--- a/app/views/asteroid/lowtohigh.html.erb
+++ b/app/views/asteroid/lowtohigh.html.erb
@@ -1,1 +1,37 @@
 <h1 class="title title is-2">Price: Low to High</h1>
+
+<%= paginate @asteroids_lowtohigh %>
+
+<div class="dropdown is-hoverable mb-5">
+  <div class="dropdown-trigger">
+    <button class="button" aria-haspopup="true" aria-controls="dropdown-menu4">
+      <span>Sorting</span>
+    </button>
+  </div>
+  <div class="dropdown-menu" id="dropdown-menu4" role="menu">
+    <div class="dropdown-content">
+      <a href="/asteroid" class="dropdown-item">
+        Show All
+      </a>
+      <a href="/asteroid/alphabetized" class="dropdown-item">
+        Alphabetized
+      </a>
+      <a href="/asteroid/newest" class="dropdown-item">
+        Newest
+      </a>
+      <a href="/asteroid/hightolow" class="dropdown-item">
+        Price: High to Low
+      </a>
+      <a href="/asteroid/lowtohigh" class="dropdown-item is-active">
+        Price: Low to High
+      </a>
+    </div>
+  </div>
+</div>
+
+<div class="columns is-multiline is-mobile">
+  <%= render partial: 'asteroid',
+             collection: @asteroids_lowtohigh %>
+</div>
+
+<%= paginate @asteroids_lowtohigh %>
