--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -58,8 +58,8 @@
     <footer class="footer">
       <div class="content has-text-centered">
         <p>
-          To learn more: <a href="#">About</a>
-          - <a href="#">Contact</a>
+          To learn more: <a href="/about">About</a>
+          - <a href="/contact">Contact</a>
         </p>
       </div>
     </footer>
