--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,7 @@
 <h1 class="title is-2">Welcome!</h1>
 
 <p class="subtitle is-4">
-  We have <a href="/planet">Planets</a>, <a href="/star">Stars</a>, and <a href="/asteroid">Asteroids</a> for Sale!
+  We have <a href="/planets">Planets</a>, <a href="/stars">Stars</a>, and <a href="/asteroids">Asteroids</a> for Sale!
 </p>
 
 <div class="columns is-multiline is-mobile">
