--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,15 +35,15 @@
             Products
           </a>
           <div class="navbar-dropdown">
-            <a class="navbar-item" href="/planet">
+            <a class="navbar-item" href="/planets">
               Planets
             </a>
 
-            <a class="navbar-item" href="/star">
+            <a class="navbar-item" href="/stars">
               Stars
             </a>
 
-            <a class="navbar-item" href="/asteroid">
+            <a class="navbar-item" href="/asteroids">
               Asteroids
             </a>
           </div>
