--- a/app/views/asteroids/index.html.erb
+++ b/app/views/asteroids/index.html.erb
@@ -1,6 +1,6 @@
-<h1 class="title title is-2">Planets</h1>
+<h1 class="title title is-2">Asteroids</h1>
 
-<%= paginate @planets %>
+<%= paginate @asteroids %>
 
 <div class="dropdown is-hoverable mb-5">
   <div class="dropdown-trigger">
@@ -10,19 +10,19 @@
   </div>
   <div class="dropdown-menu" id="dropdown-menu4" role="menu">
     <div class="dropdown-content">
-      <a href="/planet" class="dropdown-item is-active">
+      <a href="/asteroids" class="dropdown-item is-active">
         Show All
       </a>
-      <a href="/planet/alphabetized" class="dropdown-item">
+      <a href="/asteroids/alphabetized" class="dropdown-item">
         Alphabetized
       </a>
-      <a href="/planet/newest" class="dropdown-item">
+      <a href="/asteroids/newest" class="dropdown-item">
         Newest
       </a>
-      <a href="/planet/hightolow" class="dropdown-item">
+      <a href="/asteroids/hightolow" class="dropdown-item">
         Price: High to Low
       </a>
-      <a href="/planet/lowtohigh" class="dropdown-item">
+      <a href="/asteroids/lowtohigh" class="dropdown-item">
         Price: Low to High
       </a>
     </div>
@@ -30,8 +30,8 @@
 </div>
 
 <div class="columns is-multiline is-mobile">
-  <%= render partial: 'planet',
-             collection: @planets %>
+  <%= render partial: 'asteroid',
+             collection: @asteroids %>
 </div>
 
-<%= paginate @planets %>
+<%= paginate @asteroids %>
