--- a/app/views/asteroids/lowtohigh.html.erb
+++ b/app/views/asteroids/lowtohigh.html.erb
@@ -1,6 +1,6 @@
-<h1 class="title title is-2">Newest</h1>
+<h1 class="title title is-2">Price: Low to High</h1>
 
-<%= paginate @asteroids_newest %>
+<%= paginate @asteroids_lowtohigh %>
 
 <div class="dropdown is-hoverable mb-5">
   <div class="dropdown-trigger">
@@ -10,19 +10,19 @@
   </div>
   <div class="dropdown-menu" id="dropdown-menu4" role="menu">
     <div class="dropdown-content">
-      <a href="/asteroid" class="dropdown-item">
+      <a href="/asteroids" class="dropdown-item">
         Show All
       </a>
-      <a href="/asteroid/alphabetized" class="dropdown-item">
+      <a href="/asteroids/alphabetized" class="dropdown-item">
         Alphabetized
       </a>
-      <a href="/asteroid/newest" class="dropdown-item is-active">
+      <a href="/asteroids/newest" class="dropdown-item">
         Newest
       </a>
-      <a href="/asteroid/hightolow" class="dropdown-item">
+      <a href="/asteroids/hightolow" class="dropdown-item">
         Price: High to Low
       </a>
-      <a href="/asteroid/lowtohigh" class="dropdown-item">
+      <a href="/asteroids/lowtohigh" class="dropdown-item is-active">
         Price: Low to High
       </a>
     </div>
@@ -31,7 +31,7 @@
 
 <div class="columns is-multiline is-mobile">
   <%= render partial: 'asteroid',
-             collection: @asteroids_newest %>
+             collection: @asteroids_lowtohigh %>
 </div>
 
-<%= paginate @asteroids_newest %>
+<%= paginate @asteroids_lowtohigh %>
