--- a/app/views/planets/hightolow.html.erb
+++ b/app/views/planets/hightolow.html.erb
@@ -10,19 +10,19 @@
   </div>
   <div class="dropdown-menu" id="dropdown-menu4" role="menu">
     <div class="dropdown-content">
-      <a href="/planet" class="dropdown-item">
+      <a href="/planets" class="dropdown-item">
         Show All
       </a>
-      <a href="/planet/alphabetized" class="dropdown-item">
+      <a href="/planets/alphabetized" class="dropdown-item">
         Alphabetized
       </a>
-      <a href="/planet/newest" class="dropdown-item">
+      <a href="/planets/newest" class="dropdown-item">
         Newest
       </a>
-      <a href="/planet/hightolow" class="dropdown-item is-active">
+      <a href="/planets/hightolow" class="dropdown-item is-active">
         Price: High to Low
       </a>
-      <a href="/planet/lowtohigh" class="dropdown-item">
+      <a href="/planets/lowtohigh" class="dropdown-item">
         Price: Low to High
       </a>
     </div>
