--- a/app/views/planets/index.html.erb
+++ b/app/views/planets/index.html.erb
@@ -1,6 +1,13 @@
-<h1 class="title title is-2">Newest</h1>
+<h1 class="title title is-2">Planets</h1>
 
-<%= paginate @planets_newest %>
+<%= search_form_for @q do |f| %>
+  <%= f.label :name_cont %>
+  <%= f.search_field :name_cont %>
+
+  <%= f.submit %>
+<% end %>
+
+<%= paginate @planets %>
 
 <div class="dropdown is-hoverable mb-5">
   <div class="dropdown-trigger">
@@ -10,19 +17,19 @@
   </div>
   <div class="dropdown-menu" id="dropdown-menu4" role="menu">
     <div class="dropdown-content">
-      <a href="/planet" class="dropdown-item">
+      <a href="/planets" class="dropdown-item is-active">
         Show All
       </a>
-      <a href="/planet/alphabetized" class="dropdown-item">
+      <a href="/planets/alphabetized" class="dropdown-item">
         Alphabetized
       </a>
-      <a href="/planet/newest" class="dropdown-item is-active">
+      <a href="/planets/newest" class="dropdown-item">
         Newest
       </a>
-      <a href="/planet/hightolow" class="dropdown-item">
+      <a href="/planets/hightolow" class="dropdown-item">
         Price: High to Low
       </a>
-      <a href="/planet/lowtohigh" class="dropdown-item">
+      <a href="/planets/lowtohigh" class="dropdown-item">
         Price: Low to High
       </a>
     </div>
@@ -31,7 +38,7 @@
 
 <div class="columns is-multiline is-mobile">
   <%= render partial: 'planet',
-             collection: @planets_newest %>
+             collection: @planets %>
 </div>
 
-<%= paginate @planets_newest %>
+<%= paginate @planets %>
