--- a/app/views/stars/hightolow.html.erb
+++ b/app/views/stars/hightolow.html.erb
@@ -1,6 +1,6 @@
-<h1 class="title title is-2">Price: Low to High</h1>
+<h1 class="title title is-2">Price: High to Low</h1>
 
-<%= paginate @planets_lowtohigh %>
+<%= paginate @stars_hightolow %>
 
 <div class="dropdown is-hoverable mb-5">
   <div class="dropdown-trigger">
@@ -10,19 +10,19 @@
   </div>
   <div class="dropdown-menu" id="dropdown-menu4" role="menu">
     <div class="dropdown-content">
-      <a href="/planet" class="dropdown-item">
+      <a href="/stars" class="dropdown-item">
         Show All
       </a>
-      <a href="/planet/alphabetized" class="dropdown-item">
+      <a href="/stars/alphabetized" class="dropdown-item">
         Alphabetized
       </a>
-      <a href="/planet/newest" class="dropdown-item">
+      <a href="/stars/newest" class="dropdown-item">
         Newest
       </a>
-      <a href="/planet/hightolow" class="dropdown-item">
+      <a href="/stars/hightolow" class="dropdown-item is-active">
         Price: High to Low
       </a>
-      <a href="/planet/lowtohigh" class="dropdown-item is-active">
+      <a href="/stars/lowtohigh" class="dropdown-item">
         Price: Low to High
       </a>
     </div>
@@ -30,8 +30,8 @@
 </div>
 
 <div class="columns is-multiline is-mobile">
-  <%= render partial: 'planet',
-             collection: @planets_lowtohigh %>
+  <%= render partial: 'star',
+             collection: @stars_hightolow %>
 </div>
 
-<%= paginate @planets_lowtohigh %>
+<%= paginate @stars_hightolow %>
