--- a/app/views/stars/lowtohigh.html.erb
+++ b/app/views/stars/lowtohigh.html.erb
@@ -1,6 +1,6 @@
-<h1 class="title title is-2">Alphabetized</h1>
+<h1 class="title title is-2">Price: Low to High</h1>
 
-<%= paginate @asteroids_alphabetized %>
+<%= paginate @stars_lowtohigh %>
 
 <div class="dropdown is-hoverable mb-5">
   <div class="dropdown-trigger">
@@ -10,19 +10,19 @@
   </div>
   <div class="dropdown-menu" id="dropdown-menu4" role="menu">
     <div class="dropdown-content">
-      <a href="/asteroid" class="dropdown-item">
+      <a href="/stars" class="dropdown-item">
         Show All
       </a>
-      <a href="/asteroid/alphabetized" class="dropdown-item is-active">
+      <a href="/stars/alphabetized" class="dropdown-item">
         Alphabetized
       </a>
-      <a href="/asteroid/newest" class="dropdown-item">
+      <a href="/stars/newest" class="dropdown-item">
         Newest
       </a>
-      <a href="/asteroid/hightolow" class="dropdown-item">
+      <a href="/stars/hightolow" class="dropdown-item">
         Price: High to Low
       </a>
-      <a href="/asteroid/lowtohigh" class="dropdown-item">
+      <a href="/stars/lowtohigh" class="dropdown-item is-active">
         Price: Low to High
       </a>
     </div>
@@ -30,8 +30,8 @@
 </div>
 
 <div class="columns is-multiline is-mobile">
-  <%= render partial: 'asteroid',
-             collection: @asteroids_alphabetized %>
+  <%= render partial: 'star',
+             collection: @stars_lowtohigh %>
 </div>
 
-<%= paginate @asteroids_alphabetized %>
+<%= paginate @stars_lowtohigh %>
