--- a/app/views/stars/newest.html.erb
+++ b/app/views/stars/newest.html.erb
@@ -1,6 +1,6 @@
-<h1 class="title title is-2">Alphabetized</h1>
+<h1 class="title title is-2">Newest</h1>
 
-<%= paginate @stars_alphabetized %>
+<%= paginate @stars_newest %>
 
 <div class="dropdown is-hoverable mb-5">
   <div class="dropdown-trigger">
@@ -10,19 +10,19 @@
   </div>
   <div class="dropdown-menu" id="dropdown-menu4" role="menu">
     <div class="dropdown-content">
-      <a href="/star" class="dropdown-item">
+      <a href="/stars" class="dropdown-item">
         Show All
       </a>
-      <a href="/star/alphabetized" class="dropdown-item is-active">
+      <a href="/stars/alphabetized" class="dropdown-item">
         Alphabetized
       </a>
-      <a href="/star/newest" class="dropdown-item">
+      <a href="/stars/newest" class="dropdown-item is-active">
         Newest
       </a>
-      <a href="/star/hightolow" class="dropdown-item">
+      <a href="/stars/hightolow" class="dropdown-item">
         Price: High to Low
       </a>
-      <a href="/star/lowtohigh" class="dropdown-item">
+      <a href="/stars/lowtohigh" class="dropdown-item">
         Price: Low to High
       </a>
     </div>
@@ -31,7 +31,7 @@
 
 <div class="columns is-multiline is-mobile">
   <%= render partial: 'star',
-             collection: @stars_alphabetized %>
+             collection: @stars_newest %>
 </div>
 
-<%= paginate @stars_alphabetized %>
+<%= paginate @stars_newest %>
