--- a/app/views/asteroids/index.html.erb
+++ b/app/views/asteroids/index.html.erb
@@ -1,5 +1,7 @@
 <h1 class="title title is-2">Asteroids</h1>
 
+<% breadcrumb :asteroids, @asteroids %>
+
 <%= paginate @asteroids %>
 
 <div class="dropdown is-hoverable mb-5">
