--- a/app/views/asteroids/newest.html.erb
+++ b/app/views/asteroids/newest.html.erb
@@ -1,5 +1,7 @@
 <h1 class="title title is-2">Newest</h1>
 
+<% breadcrumb :newest_asteroids, @newest_asteroids %>
+
 <%= paginate @asteroids_newest %>
 
 <div class="dropdown is-hoverable mb-5">
