--- a/app/views/asteroids/show.html.erb
+++ b/app/views/asteroids/show.html.erb
@@ -1,5 +1,7 @@
 <h1 class="title title is-2">Show</h1>
 
+<% breadcrumb :asteroid, @asteroid %>
+
 <figure>
   <%= image_tag @asteroid.image %>
 </figure>
