--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,6 +50,8 @@
         </div>
       </div>
     </nav>
+    <%= breadcrumbs pretext: "You are here: ",
+                    separator: " &rsaquo; " %>
     <section class="section">
       <div class="container">
         <%= yield %>
