--- a/app/views/planets/newest.html.erb
+++ b/app/views/planets/newest.html.erb
@@ -1,5 +1,7 @@
 <h1 class="title title is-2">Newest</h1>
 
+<% breadcrumb :newest_planets, @newest_planets %>
+
 <%= paginate @planets_newest %>
 
 <div class="dropdown is-hoverable mb-5">
