--- a/app/views/planets/show.html.erb
+++ b/app/views/planets/show.html.erb
@@ -1,5 +1,7 @@
 <h1 class="title title is-2">Show</h1>
 
+<% breadcrumb :planet, @planet %>
+
 <figure>
   <%= image_tag @planet.image %>
 </figure>
