--- a/app/views/stars/alphabetized.html.erb
+++ b/app/views/stars/alphabetized.html.erb
@@ -1,5 +1,7 @@
 <h1 class="title title is-2">Alphabetized</h1>
 
+<% breadcrumb :alphabetized_stars, @alphabetized_stars %>
+
 <%= paginate @stars_alphabetized %>
 
 <div class="dropdown is-hoverable mb-5">
