--- a/app/views/stars/hightolow.html.erb
+++ b/app/views/stars/hightolow.html.erb
@@ -1,5 +1,7 @@
 <h1 class="title title is-2">Price: High to Low</h1>
 
+<% breadcrumb :hightolow_stars, @hightolow_stars %>
+
 <%= paginate @stars_hightolow %>
 
 <div class="dropdown is-hoverable mb-5">
