--- a/app/views/stars/index.html.erb
+++ b/app/views/stars/index.html.erb
@@ -1,5 +1,7 @@
 <h1 class="title title is-2">Stars</h1>
 
+<% breadcrumb :stars, @stars %>
+
 <%= paginate @stars %>
 
 <div class="dropdown is-hoverable mb-5">
