--- a/app/views/stars/newest.html.erb
+++ b/app/views/stars/newest.html.erb
@@ -1,5 +1,7 @@
 <h1 class="title title is-2">Newest</h1>
 
+<% breadcrumb :newest_stars, @newest_stars %>
+
 <%= paginate @stars_newest %>
 
 <div class="dropdown is-hoverable mb-5">
