--- a/app/views/asteroids/alphabetized.html.erb
+++ b/app/views/asteroids/alphabetized.html.erb
@@ -1,5 +1,7 @@
 <h1 class="title title is-2">Alphabetized</h1>
 
+<% breadcrumb :alphabetized_asteroids, @alphabetized_asteroids %>
+
 <%= paginate @asteroids_alphabetized %>
 
 <div class="dropdown is-hoverable mb-5">
