--- a/app/views/planets/alphabetized.html.erb
+++ b/app/views/planets/alphabetized.html.erb
@@ -1,5 +1,7 @@
 <h1 class="title title is-2">Alphabetized</h1>
 
+<% breadcrumb :alphabetized_planets, @alphabetized_planets %>
+
 <%= paginate @planets_alphabetized %>
 
 <div class="dropdown is-hoverable mb-5">
