--- a/app/views/planets/hightolow.html.erb
+++ b/app/views/planets/hightolow.html.erb
@@ -1,5 +1,7 @@
 <h1 class="title title is-2">Price: High to Low</h1>
 
+<% breadcrumb :hightolow_planets, @hightolow_planets %>
+
 <%= paginate @planets_hightolow %>
 
 <div class="dropdown is-hoverable mb-5">
