--- a/app/views/planets/lowtohigh.html.erb
+++ b/app/views/planets/lowtohigh.html.erb
@@ -1,5 +1,7 @@
 <h1 class="title title is-2">Price: Low to High</h1>
 
+<% breadcrumb :lowtohigh_planets, @lowtohigh_planets %>
+
 <%= paginate @planets_lowtohigh %>
 
 <div class="dropdown is-hoverable mb-5">
