--- a/app/views/stars/index.html.erb
+++ b/app/views/stars/index.html.erb
@@ -2,6 +2,13 @@
 
 <% breadcrumb :stars, @stars %>
 
+<%= search_form_for @q do |f| %>
+  <%= f.label :name_cont %>
+  <%= f.search_field :name_cont %>
+
+  <%= f.submit %>
+<% end %>
+
 <%= paginate @stars %>
 
 <div class="dropdown is-hoverable mb-5">
