--- a/app/views/planets/_planet.html.erb
+++ b/app/views/planets/_planet.html.erb
@@ -9,7 +9,7 @@
     <% end %>
     <div class="card-content">
       <p class="title is-4"><%= link_to planet.name, planet %></p>
-      <p class="subtitle is-6 has-text-success">$<%= planet.cost %></p>
+      <p class="subtitle is-6 has-text-success"><%= number_to_currency planet.cost %></p>
       <p><%= planet.planet_type.name %></p>
       <div class="content">
         <%= planet.description %>
