--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -62,6 +62,7 @@
         <p>
           To learn more: <a href="/about">About</a>
           - <a href="/contact">Contact</a>
+          - Copysomething <%= Time.current.year %>
         </p>
       </div>
     </footer>
