Session based shopping cart is complete

--- a/app/views/planets/_planet.html.erb
+++ b/app/views/planets/_planet.html.erb
@@ -16,8 +16,16 @@
       </div>
     </div>
     <footer class="card-footer">
-      <a href="#" class="card-footer-item">Add to Cart</a>
-      <a href="#" class="card-footer-item">Buy Now</a>
+      <% if cart.include?(planet) %>
+        <%= button_to cart_path(planet), method: :delete, class: "button is-danger" do %>
+          Remove from Cart
+        <% end %>
+      <% else %>
+        <%= form_with url: cart_index_path, method: :post do %>
+          <%= hidden_field_tag(:id, planet.id) %>
+          <%= button_tag 'Add to Cart', class: "button is-success" %>
+        <% end %>
+      <% end %>
     </footer>
   </div>
 </div>
