--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -49,6 +49,26 @@
           </div>
         </div>
       </div>
+
+      <div class="navbar-end">
+
+        <div class="navbar-item has-dropdown is-hoverable">
+          <a class="navbar-link">
+            Cart
+          </a>
+          <div class="navbar-dropdown">
+            <ul>
+              <% cart.each do |planet| %>
+                <li class="navbar-item">
+                  <%= planet.name %> <%= link_to 'X', cart_path(planet), method: :delete %>
+                </li>
+              <% end %>
+            </ul>
+          </div>
+        </div>
+
+      </div>
+
     </nav>
     <%= breadcrumbs pretext: "You are here: ",
                     separator: " &rsaquo; " %>
