--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -52,6 +52,36 @@
       <div class="navbar-end">
         <div class="navbar-item has-dropdown is-hoverable">
           <a class="navbar-link">
+            <% if user_signed_in? %>
+              <%= current_user.email %>
+            <% else %>
+              Account
+            <% end %>
+          </a>
+          <div class="navbar-dropdown">
+            <ul>
+              <% if user_signed_in? %>
+                <li class="navbar-item">
+                  <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
+                </li>
+
+                <li class="navbar-item">
+                  <%= link_to "Edit Profile", edit_user_registration_path %>
+                </li>
+              <% else %>
+                <li class="navbar-item">
+                  <%= link_to "Sign Up", new_user_registration_path %>
+                </li>
+
+                <li class="navbar-item">
+                  <%= link_to "Sign In", new_user_session_path %>
+                </li>
+              <% end %>
+            </ul>
+          </div>
+        </div>
+        <div class="navbar-item has-dropdown is-hoverable">
+          <a class="navbar-link">
             Cart
           </a>
           <div class="navbar-dropdown">
@@ -68,6 +98,7 @@
     </nav>
     <%= breadcrumbs pretext: "You are here: ",
                     separator: " &rsaquo; " %>
+    <%= notice %>
     <section class="section">
       <div class="container">
         <%= yield %>
